# basic-oauth2-server

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  main.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
basic_oauth2_server/: __init__.py  __main__.py  access_token.py  admin.py  authorization_code_grant.py  cli.py  client_credentials_grant.py  config.py  consent_token.py  crypto.py  db.py  exceptions.py  jwks.py  jwt.py  middleware.py  rate_limiter.py  secrets.py  server.py  token_service.py  utils.py
basic_oauth2_server/grants/: __init__.py  client_credentials.py
tests/: __init__.py  test_authorization_code_grant.py  test_cli.py  test_client_credentials_grant.py  test_config.py  test_consent_token.py  test_crypto.py  test_db.py  test_jwks.py  test_jwt.py  test_middleware.py  test_rate_limiter.py  test_secrets.py  test_server.py  test_token_service.py  test_utils.py
tests/keys/: ed25519-private.pem  ed25519-public.pem  es256-private.pem  es256-public.pem  es384-private.pem  es384-public.pem  es512-private.pem  es512-public.pem  hs256.secret  rsa-private.pem  rsa-public.pem
